Bug 38535 – A DeviceAutoMountHint attribute should be added to udisks

With minor changes by David Zeuthen, see the bug for details.

https://bugs.freedesktop.org/show_bug.cgi?id=38535

Signed-off-by: David Zeuthen <davidz@redhat.com>